dataset1235/2025-2/610742602/users/4180041627/executions/677928262_1462915504.log
== RUN (2025-08-26 21:10:08)
-- CODE: 
from math import *
L= float(input("insira o lado"))

a= (5/2*L*(L/2*tan(pi/5)))

print(round(a,2))



# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
insira o lado73.56
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
insira o lado32.69
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
insira o lado109.89
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
insira o lado58.12
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
insira o lado14.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
insira o lado90.82
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:09:44)
-- CODE: 
from math import *
L= float(input("insira o lado"))

a= (5/2*L*(L/2*tan(pi/5))

print(round(a,2))



# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*(L/2*tan(pi/5))
       ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*(L/2*tan(pi/5))
       ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*(L/2*tan(pi/5))
       ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*(L/2*tan(pi/5))
       ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*(L/2*tan(pi/5))
       ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*(L/2*tan(pi/5))
       ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:03:28)
-- CODE: 
from math import *
L= float(input("insira o lado"))

a= 5/2*lado*apotema

print(round(a,2))



# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a= 5/2*lado*apotema
           ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a= 5/2*lado*apotema
           ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a= 5/2*lado*apotema
           ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a= 5/2*lado*apotema
           ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a= 5/2*lado*apotema
           ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a= 5/2*lado*apotema
           ^^^^
NameError: name 'lado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:13:04)
-- CODE: 
from math import *
L= float(input("insira o lado"))

a= (5/2)*L*(L/(2*tan(pi/5)))

print(round(a,2))



# faça seu código aqui!
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
insira o lado139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
insira o lado61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
insira o lado208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
insira o lado110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
insira o lado27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
insira o lado172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:12:32)
-- CODE: 
from math import *
L= float(input("insira o lado"))

a= (5/2)*L*(L/(2*tan(pi/5)))

print(round(a,2))



# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
insira o lado139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
insira o lado61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
insira o lado208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
insira o lado110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
insira o lado27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
insira o lado172.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:09:38)
-- CODE: 
from math import *
L= float(input("insira o lado"))

a= (5/2*L*(L/2*tan(pi/5))

print(round(a,2))



# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*(L/2*tan(pi/5))
       ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*(L/2*tan(pi/5))
       ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*(L/2*tan(pi/5))
       ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*(L/2*tan(pi/5))
       ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*(L/2*tan(pi/5))
       ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*(L/2*tan(pi/5))
       ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:05:54)
-- CODE: 
from math import *
L= float(input("insira o lado"))

a= 5/2*L*(L*/2*tanpi/5)

print(round(a,2))



# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 4
    a= 5/2*L*(L*/2*tanpi/5)
                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 4
    a= 5/2*L*(L*/2*tanpi/5)
                ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 4
    a= 5/2*L*(L*/2*tanpi/5)
                ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 4
    a= 5/2*L*(L*/2*tanpi/5)
                ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 4
    a= 5/2*L*(L*/2*tanpi/5)
                ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 4
    a= 5/2*L*(L*/2*tanpi/5)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:06:44)
-- CODE: 
from math import *
L= float(input("insira o lado"))

a= (5/2*L*(L*/2*tan(pi/5)))

print(round(a,2))



# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*(L*/2*tan(pi/5)))
                 ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*(L*/2*tan(pi/5)))
                 ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*(L*/2*tan(pi/5)))
                 ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*(L*/2*tan(pi/5)))
                 ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*(L*/2*tan(pi/5)))
                 ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*(L*/2*tan(pi/5)))
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:07:04)
-- CODE: 
from math import *
L= float(input("insira o lado"))

a= (5/2*L*L*/2*tan(pi/5))

print(round(a,2))



# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*L*/2*tan(pi/5))
                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*L*/2*tan(pi/5))
                ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*L*/2*tan(pi/5))
                ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*L*/2*tan(pi/5))
                ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*L*/2*tan(pi/5))
                ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*L*/2*tan(pi/5))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:09:55)
-- CODE: 
from math import *
L= float(input("insira o lado"))

a= (5/2*L*(L/2*tan(pi/5))

print(round(a,2))



# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*(L/2*tan(pi/5))
       ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*(L/2*tan(pi/5))
       ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*(L/2*tan(pi/5))
       ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*(L/2*tan(pi/5))
       ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*(L/2*tan(pi/5))
       ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*(L/2*tan(pi/5))
       ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:09:30)
-- CODE: 
from math import *
L= float(input("insira o lado"))

a= (5/2*L*(L*/2*tan(pi/5))

print(round(a,2))



# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*(L*/2*tan(pi/5))
                 ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*(L*/2*tan(pi/5))
                 ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*(L*/2*tan(pi/5))
                 ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*(L*/2*tan(pi/5))
                 ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*(L*/2*tan(pi/5))
                 ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*(L*/2*tan(pi/5))
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:09:46)
-- CODE: 
from math import *
L= float(input("insira o lado"))

a= (5/2*L*(L/2*tan(pi/5))

print(round(a,2))



# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*(L/2*tan(pi/5))
       ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*(L/2*tan(pi/5))
       ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*(L/2*tan(pi/5))
       ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*(L/2*tan(pi/5))
       ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*(L/2*tan(pi/5))
       ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 4
    a= (5/2*L*(L/2*tan(pi/5))
       ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:06:10)
-- CODE: 
from math import *
L= float(input("insira o lado"))

a= 5/2*L*(L*/2*tan(pi/5))

print(round(a,2))



# faça seu código aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 4
    a= 5/2*L*(L*/2*tan(pi/5))
                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 4
    a= 5/2*L*(L*/2*tan(pi/5))
                ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 4
    a= 5/2*L*(L*/2*tan(pi/5))
                ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 4
    a= 5/2*L*(L*/2*tan(pi/5))
                ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 4
    a= 5/2*L*(L*/2*tan(pi/5))
                ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 4
    a= 5/2*L*(L*/2*tan(pi/5))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
